# nn

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  conanfile.txt
test/: main.cpp  mnist_test.cpp
